--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1633,7 +1633,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-    color: #fff;
+    color: rgba(19, 69, 120, 0.49);
   padding: 0 0 30px 0;
   font-size: 14px;
   background: #f1f6fe;
